# AirSane

./: .gitignore  CMakeLists.txt  README.https.md  README.macOS.md  README.md  version.cmake
.github/workflows/: build.yml  ccpp.yml  codeql-analysis.yml  compile-debian.yml  compile-ubuntu.yml
basic/: dictionary.cpp  dictionary.h  fdbuf.cpp  fdbuf.h  hostname-macos.mm  hostname.cpp  hostname.h  url.cpp  url.h  uuid.cpp  uuid.h  workerthread.cpp  workerthread.h
etc/: access.conf  ignore.conf  options.conf
freebsd/: airsaned
https/nginx/: airsaned-ssl
https/systemd/: airsaned.default
imageformats/: imageencoder.cpp  imageencoder.h  jpegencoder.cpp  jpegencoder.h  pdfencoder.cpp  pdfencoder.h  pngencoder.cpp  pngencoder.h
launchd/: org.simulpiscator.airsaned.plist
sanecpp/: sanecpp.cpp  sanecpp.h
server/: configfile.cpp  configfile.h  main.cpp  mainpage.cpp  mainpage.h  mainserver.cpp  mainserver.h  optionsfile.cpp  optionsfile.h  purgethread.cpp  purgethread.h  scanjob.cpp  scanjob.h  scanner.cpp  scanner.h  scannerpage.cpp  scannerpage.h  scannerserver.cpp  scannerserver.h  scanserver.cpp  scanserver.h  server.cpp  server.h
systemd/: airsaned.default  airsaned.service  airsaned.service.in
web/: accessfile.cpp  accessfile.h  errorpage.cpp  errorpage.h  httpserver.cpp  httpserver.h  webpage.cpp  webpage.h
zeroconf/: hotplugnotifier.cpp  hotplugnotifier.h  mdnspublisher-avahi.cpp  mdnspublisher-dnssd.cpp  mdnspublisher-dnssd.mm  mdnspublisher.cpp  mdnspublisher.h  networkhotplugnotifier-macos.mm  networkhotplugnotifier.cpp  networkhotplugnotifier.h
